# skd-odbc-foshan

./: .appveyor.yml  CMakeLists.txt  README.md
cmake/: find_ssl.cmake
debian/: changelog  clickhouse-odbc.postinst  clickhouse-odbc.prerm  control  rules  skm-odbc.postinst  skm-odbc.prerm
driver/: CMakeLists.txt  backup - readme.txt  config.cpp  config.h  connection.cpp  connection.h  environment.cpp  escape_sequences.cpp  escaping - 2018-04-20V1.1.7z  escaping-2018-04-24V1.2.rar  info.cpp  lexer.cpp  log.h  odbc.cpp  odbc.ini  statement.cpp  type_parser.cpp  unixodbc.ini
driver/escaping/: escape_sequences.cpp  escape_sequences.cpp.bak  escape_sequences.h  escaping.7z  lexer.cpp  lexer.h  string_view.h
driver/escaping - 2018-04-19/: CMakeLists.txt  escape_sequences - 副本.cpp  escape_sequences.cpp  escape_sequences.h  lexer.cpp  lexer.h
driver/escaping - 2018-04-19 154339/: escape_sequences - 副本 (2).cpp  escape_sequences.cpp  escaping.rar  lexer.cpp
driver/escaping - 2018-04-19V1.0/: escape_sequences.cpp
driver/escaping - 2018-04-20V1.1/: escape_sequences.cpp  lexer.h
driver/escaping==/: escape_sequences.cpp  lexer.cpp  lexer.h
driver/ut/: CMakeLists.txt  escape_sequences.cpp  new 4.txt
driver/win/: ----resource.rc  export.def  exportw.def  resource.aps  resource.rc  setup.cpp
odbcTest/: ODBCTest.vcxproj  main.cpp
test/: test.sh
vs/: UpgradeLog.htm  skd_odbc64.sln
vs/SKD-sql-Generate/: ReadMe.txt  SKD-sql-Generate.aps  SKD-sql-Generate.cpp  SKD-sql-Generate.h  SKD-sql-Generate.rc  SKD-sql-Generate.vcxproj  SKD-sql-Generate.vcxproj.filters  SKD-sql-GenerateDlg.cpp  resource.h  (+2 more)
(+19 files in other folders)
